--- a/trunk/mywebs/mywebs/MasterPage.master
+++ b/trunk/mywebs/mywebs/MasterPage.master
@@ -10,7 +10,7 @@
 </head>
 <body style="height: 100px">
     <form id="form1" runat="server">
-    <div style="background-color: #80FFFF">
+    <div style="background-color: #CCFFFF">
         
             Sistema de Gestión<br />
             <hr style="color: #000000" />
